Add Name Attribute for Local User
