# src/api/resources/users/user.service.js
@@ -4,8 +4,9 @@ import jwt from "jsonwebtoken";
 
 require('dotenv').config();
 
-export const validateSchema = ( body ) => {
+export const ValidateSignupSchema = ( body ) => {
    const clientSchema = Joi.object().keys({
+      name: Joi.string().required(),
       email: Joi.string().email({ minDomainSegments: 2, tlds: { allow: ['com', 'net'] } }).required(),
       password: Joi.string().regex(/^[a-zA-Z0-9]{3,30}$/).required()
    });
@@ -15,6 +16,19 @@ export const validateSchema = ( body ) => {
    }
    return { value };
 }
+
+export const validateLoginSchema = ( details ) => {
+   const clientSchema = Joi.object().keys({
+      email: Joi.string().email({ minDomainSegments: 2, tlds: { allow: ['com', 'net'] } }).required(),
+      password: Joi.string().regex(/^[a-zA-Z0-9]{3,30}$/).required()
+   });
+   const { error, value } = clientSchema.validate(details, { abortEarly: false });
+   if (error && error.details) {
+      return { error }
+   }
+   return { value };
+}
+
 
 export const generateToken = ( user ) => {
    return jwt.sign({ id: user._id }, devConfig.jwt.secret, { expiresIn: '1d' });
